--- a/manifests/apps/gateway/deployment.yaml
+++ b/manifests/apps/gateway/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: gateway
-        image: ghcr.io/haema-dev/cloud-gateway:2747ecd8f1def35897ea9522e498bb142ee91a79
+        image: ghcr.io/haema-dev/cloud-gateway:latest
         ports:
         - containerPort: 8080
         # 2026년 기준 리소스 제한 (32GB RAM 노드 최적화)
