--- a/.github/workflows/deploy-gateway.yml
+++ b/.github/workflows/deploy-gateway.yml
@@ -1,4 +1,4 @@
-name: "Step4-gateway: Deploy Spring Cloud Gateway to GHCR"
+name: "Step 3 [gateway]: Deploy Spring Cloud Gateway to GHCR"
 
 on:
   workflow_dispatch:
