--- a/manifests/frontend/frontend-service.yaml
+++ b/manifests/frontend/frontend-service.yaml
@@ -8,5 +8,5 @@ spec:
   selector:
     app: cloud-frontend
   ports:
-    - port: 80 # Gateway가 찌를 포트
-      targetPort: 3000 # 프론트엔드 컨테이너의 실제 포트
+    - port: 80 # Gateway가 찌를 포트 (Service 입구)
+      targetPort: 80 # 프론트엔드 컨테이너(Nginx)의 실제 포트 (Service 출구)
