--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,69 @@
+# [SYSTEM & IDE]
+.DS_Store
+Thumbs.db
+*.sw?
+*.swo
+*.swp
+*~
+.idea/
+.vscode/
+!.vscode/extensions.json
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# [ROOT DIRECTORY]
+myenv/
+data/
 README2.md
-sllm/__pycache__/
+# 주의: requirements.txt는 관습적으로 ignore하지 않으나 요청에 따라 유지함.
+
+# [SHARED MODULES]
+sllm/
+embedding/
+crawling/
+
+# [APPS: GATEWAY (Gradle/Kotlin)]
+apps/gateway/HELP.md
+apps/gateway/.gradle/
+apps/gateway/build/
+apps/gateway/out/
+apps/gateway/bin/
+apps/gateway/.kotlin/
+apps/gateway/*.iws
+apps/gateway/*.iml
+apps/gateway/*.ipr
+# Exception for wrapper
+apps/gateway/!gradle/wrapper/gradle-wrapper.jar
+# Nested builds
+apps/gateway/**/src/main/**/build/
+apps/gateway/**/src/test/**/build/
+apps/gateway/**/src/main/**/out/
+apps/gateway/**/src/test/**/out/
+
+# [APPS: BACKEND (Python)]
+apps/backend/.venv/
+apps/backend/.env
+apps/backend/**/__pycache__/
+
+# [APPS: FRONTEND (Node/Vite)]
+apps/frontend/node_modules/
+apps/frontend/dist/
+apps/frontend/dist-ssr/
+apps/frontend/*.local
+apps/frontend/.env
+apps/frontend/.env.local
+apps/frontend/.env.*.local
+apps/frontend/tsconfig.tsbuildinfo
+apps/frontend/vite.config.d.ts
+apps/frontend/vite.config.d.ts.map
+
+# [LOGS]
+*.log
+apps/frontend/logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
