--- a/manifests/gateway/gateway-deployment.yaml
+++ b/manifests/gateway/gateway-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: gateway
-        image: ghcr.io/haema-dev/cloud-gateway:4a4d8dce0846d3fc81dcf0e62ae333fbd3e1103f
+        image: ghcr.io/haema-dev/cloud-gateway:latest
         ports:
         - containerPort: 8080
         # 2026년 기준 리소스 제한 (32GB RAM 노드 최적화)
