Remove Actuator & Logger Debug Mode

--- a/apps/gateway/src/main/resources/application.yaml
+++ b/apps/gateway/src/main/resources/application.yaml
@@ -1,19 +1,22 @@
 spring:
   application:
     name: way
+
 management:
   endpoints:
     web:
       exposure:
-        # health: K8s Liveness/Readiness Probe용
-        # prometheus: 메트릭 수집용
-        # gateway: 현재 설정된 라우팅 정보 확인용 (디버깅 필수)
-        include: "health,prometheus,gateway"
+        include: "health,gateway"
   endpoint:
     gateway:
-      # 보안을 위해 'read-only' 설정을 권장합니다 (동적 수정 차단)
       access: read-only
     health:
-      # K8s Probes를 위한 상세 정보 표시 설정
+      # K8s Liveness/Readiness 프로브를 위한 정밀 진단 활성화
       probes:
         enabled: true
+
+logging:
+  level:
+    org.springframework.cloud.gateway: TRACE
+    org.springframework.cloud.gateway.route.RouteDefinitionLocator: INFO
+    gate.way: DEBUG
