--- a/manifests/gateway/gateway-deployment.yaml
+++ b/manifests/gateway/gateway-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: gateway
-        image: ghcr.io/haema-dev/cloud-gateway:c704ad96ec70c8d4437ff1c7fa03ecba23d42c1d
+        image: ghcr.io/haema-dev/cloud-gateway:latest
         ports:
         - containerPort: 8080
         resources:
