--- a/manifests/gateway/gateway-deployment.yaml
+++ b/manifests/gateway/gateway-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: gateway
-        image: ghcr.io/haema-dev/cloud-gateway:398ee0fe1614df2f23dd69e504977f8176bd0d59
+        image: ghcr.io/haema-dev/cloud-gateway:latest
         ports:
         - containerPort: 8080
         resources:
@@ -29,11 +29,12 @@ spec:
           httpGet:
             path: /ping
             port: 8080
-          initialDelaySeconds: 15
-          periodSeconds: 10
+          initialDelaySeconds: 30
+          periodSeconds: 21600      # 6시간 (하루 4번)
+          timeoutSeconds: 10
         readinessProbe:
           httpGet:
             path: /ping
             port: 8080
-          initialDelaySeconds: 10 
-          periodSeconds: 5
+          initialDelaySeconds: 15
+          periodSeconds: 21600      # 6시간 (하루 4번)
