--- a/manifests/frontend/frontend-deployment.yaml
+++ b/manifests/frontend/frontend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: ghcr.io/haema-dev/cloud-frontend:b24ab082e0351e76c52f02b03f92732095d14832
+        image: ghcr.io/haema-dev/cloud-frontend:latest
         ports:
         - containerPort: 80
         resources:
@@ -25,12 +25,12 @@ spec:
           requests:
             cpu: "100m"
             memory: "128Mi"
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 80
-          initialDelaySeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 80
+        # livenessProbe:
+        #   httpGet:
+        #     path: /
+        #     port: 80
+        #   initialDelaySeconds: 10
+        # readinessProbe:
+        #   httpGet:
+        #     path: /
+        #     port: 80
